添加@Value注解解析，修改DedicatedTask依赖